feat: add users view and file uploader for to-firm and from firm

--- a/src/app/features/from-firm/from-firm.component.html
+++ b/src/app/features/from-firm/from-firm.component.html
@@ -1,4 +1,4 @@
-<div class="documents-container">
+<!-- <div class="documents-container">
     <div class="header">
       <h1>Documents</h1>
       <button class="upload-button" mat-raised-button>Upload Document</button>
@@ -47,5 +47,6 @@
           </div>
         </mat-tab>
       </mat-tab-group>
-  </div>
+  </div> -->
   
+  <app-file-uploader [source]="'From Firm'"></app-file-uploader>
