--- a/src/app/features/to-firm/to-firm.component.html
+++ b/src/app/features/to-firm/to-firm.component.html
@@ -1,17 +1,14 @@
-<div class="transactions-container">
-    <div class="header">
+<!-- <div class="transactions-container"> -->
+  <app-file-uploader [source]="'To Firm'"></app-file-uploader>
+    <!-- <div class="header">
       <h1>Transactions</h1>
     </div>
 
     <div class="cards-container">
-      <app-table
-         [displayedColumns]="productColumns"
-          [dataSource]="products">
-          </app-table>
-        <!-- <mat-card class="transactions-card">
+        <mat-card class="transactions-card">
           <h2 class="card-title">Card 1 Title</h2>
           <p class="card-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </mat-card> -->
-      </div>
-  </div>
+        </mat-card>
+      </div> -->
+  <!-- </div> -->
   
