--- a/src/app/features/to-firm/to-firm.component.scss
+++ b/src/app/features/to-firm/to-firm.component.scss
@@ -1,18 +1,18 @@
-.transactions-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: fit-content;
-    max-width: 60%;
-    margin: 5% auto;
-    max-height: 90vh;
-    padding: 5%;
-    box-sizing: border-box;
-    overflow-y: auto;
-    border: 1px solid rgb(202, 195, 195);
-    box-shadow: 2px 10px 100px rgba(0, 0, 0, 0.1);
-    border-radius: 3%;
-  }
+// .transactions-container {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     width: fit-content;
+//     max-width: 60%;
+//     margin: 5% auto;
+//     max-height: 90vh;
+//     padding: 5%;
+//     box-sizing: border-box;
+//     overflow-y: auto;
+//     border: 1px solid rgb(202, 195, 195);
+//     box-shadow: 2px 10px 100px rgba(0, 0, 0, 0.1);
+//     border-radius: 3%;
+//   }
   
   .header {
     display: flex;
