--- a/src/app/shared/components/table/table.component.html
+++ b/src/app/shared/components/table/table.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <div class="table-container">
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   
@@ -40,6 +40,7 @@
       <tr mat-row *matRowDef="let row; columns: columnFields;"></tr>
     </table>
 
-</div>
+</div> -->
+
 
   
