--- a/src/app/features/auth/signup/signup.component.scss
+++ b/src/app/features/auth/signup/signup.component.scss
@@ -22,6 +22,8 @@
 .left img {
   max-width: 100%;
   max-height: 100%;
+  height: 100vh;
+  width: 100vw;
   object-fit: cover;
 }
 
@@ -30,7 +32,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #005eda;
+  background-color: #3075cf;
 }
 
 .signup-card {
