feat: things ready for demo

--- a/src/app/features/contact-us/contact-us.component.html
+++ b/src/app/features/contact-us/contact-us.component.html
@@ -1,6 +1,6 @@
 <div class="contact-us-container">
     <div class="header">
-      <h1>Contact Us</h1>
+      <h1>Help Page</h1>
     </div>
     <div class="cards-container">
       <!-- <app-file-uploader/> -->
