--- a/src/app/features/to-firm/to-firm.component.html
+++ b/src/app/features/to-firm/to-firm.component.html
@@ -1,5 +1,5 @@
 <!-- <div class="transactions-container"> -->
-  <app-file-uploader [source]="'To Firm'"></app-file-uploader>
+  <app-file-uploader [source]="'To Client'"></app-file-uploader>
     <!-- <div class="header">
       <h1>Transactions</h1>
     </div>
