--- a/src/app/shared/components/sidebar/sidebar.component.scss
+++ b/src/app/shared/components/sidebar/sidebar.component.scss
@@ -1,35 +1,57 @@
 .sidenav-container {
-  display: flex;
-  flex-direction: column;
-  height: 90vh; /* Adjusted for full height */
-  max-width: fit-content;
-  background-color: #1b4f83;
+  height: 85vh;
+  background-color: #1b4f83; 
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
   color: aliceblue;
-}
+  overflow: auto;
 
-.nav-item {
-  padding: 15px;
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
+  .sidenav {
 
-.nav-item.active, .nav-item:hover {
-  background-color: rgba(0, 183, 255, 0.87);
-}
+    .nav-list {
+      display: flex;
+      flex-direction: column;
 
-.item-icon {
-  margin-right: 20px; /* Adjust spacing between icon and text as needed */
-}
+      .nav-category {
+        .category-header {
+          cursor: pointer;
+          display: flex;
+          justify-content: space-between;
+          margin-top: 10px;
+          padding: 15px;
+          font-weight: bolder;
+          transition: background-color 0.3s;
 
+          &.active {
+            background-color: #e0e0e0;
+          }
 
-.toggle-button-container {
-  margin-top: auto;
-}
+          .expand-icon {
+            transition: transform 0.3s;
+          }
+        }
 
-:host {
-  display: block;
-  width: 250px;
-  height: 100%;
+        .category-items {
+          .nav-item {
+            padding: 15px;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            transition: background-color 0.3s;
+
+            &.active {
+              background-color: rgba(0, 183, 255, 0.87)
+            }
+
+            .item-icon {
+              margin-right: 10px;
+            }
+
+            .item-text {
+              font-size: 14px;
+            }
+          }
+        }
+      }
+    }
+  }
 }
