--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -1,69 +1,8 @@
-// .home-container {
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-//     width: 50%;
-//     margin: 5% auto;
-//     height: auto;
-//     padding: 5%;
-//     box-sizing: border-box;
-//     border: 1px solid rgb(202, 195, 195);
-//     box-shadow: 2px 10px 100px rgba(0, 0, 0, 0.1);
-//     border-radius: 3%;
-//   }
-  
-//   .header {
-//     display: flex;
-//     justify-content: space-between;
-//     width: 100%;
-//     margin-bottom: 20px;
-//   }
-  
-//   .refer-link {
-//     color: #007bff;
-//     cursor: pointer;
-//     background-color: white;
-//     border: none;
-//     text-decoration: underline;
-//   }
-  
-//   .refer-link:hover {
-//     color: #0056b3;
-//   }
-  
-//   .cards-container {
-//     display: flex;
-//     flex-direction: column;
-//     gap: 20px;
-//     width: 100%;
-//   }
-  
-//   .dashboard-card {
-//     padding: 20px;
-//     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-//     display: flex;
-//     flex-direction: column;
-//     align-items: flex-start;
-//   }
-  
-//   .card-title {
-//     margin: 0;
-//     font-size: 1.5rem;
-//     font-weight: bold;
-//   }
-  
-//   .card-content {
-//     margin: 10px 0 0;
-//     font-size: 1rem;
-//     color: #333;
-//   }
-  
-
 .background-image {
-  position: relative;
+  // position: absolute;
   width: 100%;
-  height: 70vh; /* Adjust the height as needed */
-  background-image: url('../../../assets/background.jpg'); /* Replace with your image path */
+  height: calc(100vh - 30vh);
+  background-image: url('../../../assets/background.jpg');
   background-size: cover;
   background-position: center;
 }
@@ -75,10 +14,8 @@
   transform: translate(-50%, -50%);
   color: black;
   text-align: center;
-  // background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background for better text readability */
   padding: 20px;
   border: none;
-  // border-radius: 10px;
 
   h1 {
     font-size: 35px;
@@ -87,7 +24,6 @@
 
   .saving-btn {
     padding: 10px;
-    // border: none;
     border-radius: 20px;
     background: none;
     cursor: pointer;
@@ -102,8 +38,6 @@
 }
 
 .below-image-text {
-  // padding-left: 20%;
-  // padding-right: 20%;
   margin: auto;
   text-align: center;
   max-width: 70%;
