--- a/src/app/features/my-profile/my-profile.component.html
+++ b/src/app/features/my-profile/my-profile.component.html
@@ -12,10 +12,10 @@
         <h2 class="card-title">Card 2 Title</h2>
         <p class="card-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       </mat-card>
-      <mat-card class="profile-card">
+      <!-- <mat-card class="profile-card">
         <h2 class="card-title">Card 3 Title</h2>
         <p class="card-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      </mat-card>
+      </mat-card> -->
     </div>
   </div>
   
