--- a/src/app/features/my-profile/my-profile.component.scss
+++ b/src/app/features/my-profile/my-profile.component.scss
@@ -1,15 +1,10 @@
 .profile-container {
-    display: flex;
-    flex-direction: column;
     align-items: center;
-    width: 50%;
-    margin: 5% auto;
-    height: auto;
     padding: 5%;
     box-sizing: border-box;
+    height: 100%;
     border: 1px solid rgb(202, 195, 195);
     box-shadow: 2px 10px 100px rgba(0, 0, 0, 0.1);
-    border-radius: 3%;
     background-color: var(--background-color, white);
     color: var(--text-color, black);
     transition: background-color 0.3s, color 0.3s;
