--- a/src/app/shared/components/file-uploader/file-uploader.component.scss
+++ b/src/app/shared/components/file-uploader/file-uploader.component.scss
@@ -21,9 +21,12 @@
 
       li {
         cursor: pointer;
-        // margin: 5px 0;
         padding: 5px;
         border-radius: 4px;
+
+        .dir-name {
+          padding: 5px;
+        }
 
         ul {
           padding-left: 20px;
