--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -1,13 +1,10 @@
 @import '../../../../style-variables.scss';
 
 .footer {
-    width: 100%;
+    // width: 100%;
     padding: 10px;
     background-color: $bg-color;
     color: rgb(5, 5, 5);
     text-align: center;
-    position: fixed;
-    bottom: 0;
-    left: 0;
   }
   
