--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   background-color: $bg-color;
-  align-items: center;
+  align-items: center;  
 
 .header-content {
   display: flex;
@@ -12,7 +12,7 @@
   width: 100vW;
 
 .icon img {
-  height: 40px; /* Adjust as needed */
+  height: 40px;  
   margin-right: 20px;
 }
 
@@ -27,8 +27,8 @@
 
 .buttons {
   display: flex;
-  gap: 10px; /* Space between buttons */
-  margin-right: 20px; /* Space between buttons and username */
+  gap: 10px; 
+  margin-right: 20px; 
 }
 }
 }
