--- a/src/app/shared/components/layout/layout.component.html
+++ b/src/app/shared/components/layout/layout.component.html
@@ -1,10 +1,16 @@
-<div class="layout">
-    <app-header/>
-    <div class="main-content">
-      <app-sidebar/>
-      <div class="router-content">
-        <router-outlet/>
-      </div>
-    </div>
-    <app-footer/>
+<div class="main-container">
+  <div class="header">
+    <app-header></app-header>
   </div>
+  
+  <div class="layout">
+    <app-sidebar class="sidebar"></app-sidebar>
+    <div class="content">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+  
+  <div class="footer">
+    <app-footer></app-footer>
+  </div>
+</div>
