--- a/src/app/shared/components/layout/layout.component.scss
+++ b/src/app/shared/components/layout/layout.component.scss
@@ -1,24 +1,50 @@
+/* General layout styles */
+.main-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  overflow: none;
+}
+
+.header {
+  flex: 0 0 10%;
+  width: 100%;
+  background-color: #ffffff;
+  z-index: 2;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  // position: fixed;
+}
+
+.footer {
+  flex: 0 0 6%;
+  bottom: 0;
+  position: fixed;
+  width: 100%;
+  background-color: #ffffff;
+  z-index: 2;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+  // position: fixed;
+}
+
 .layout {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
+  display: flex;
+  flex: 1;
+  // overflow: hidden;
+}
 
-    .main-content {
-      display: flex;
-      flex: 1;
+.sidebar {
+  flex: 0 0 15%;
+  height: 100%;
+  background-color: #ffffff;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+  overflow: auto;
+  z-index: 1;
+  // position: fixed;
+}
 
-      app-sidebar {
-        width: auto;
-      }
-
-      .router-content {
-        flex: 1;
-        padding: 5px;
-        background: rgb(255, 255, 255);
-        overflow-y: auto;
-      }
-    }
-  }
-  
-  
-
+.content {
+  flex: 1;
+  overflow-y: auto;
+  // padding: 10px;
+}
